dom/ipc/BrowserChild.cpp
@@ -3139,7 +3139,7 @@ void BrowserChild::ReinitRendering() {
 
   // In some cases, like when we create a windowless browser,
   // RemoteLayerTreeOwner/BrowserChild is not connected to a compositor.
-  if (mLayersConnected.isNothing() || !*mLayersConnected) {
+  if (mLayersConnected.isNothing()) {
     return;
   }
 
